fixes vertical alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 1rem;
     display: flex;
-    align-items: center;
+    
     background-color: hsl(var(--gray-blue));
     width: 100%;
     min-height: 100vh;
@@ -26,7 +26,7 @@ h1 {
 
 .main--wrapper {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 100px 1fr;
     gap: 40px;
     align-items: center;
     width: 100%;
